src/test/ui/feature-gates/feature-gate-cfg-panic.stderr
error[E0658]: `cfg(panic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-panic.rs:1:7
   |
LL | #[cfg(panic = "unwind")]
   |       ^^^^^^^^^^^^^^^^
   |
   = note: see issue #77443 <https://github.com/rust-lang/rust/issues/77443> for more information
   = help: add `#![feature(cfg_panic)]` to the crate attributes to enable

error[E0658]: `cfg(panic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-panic.rs:4:11
   |
LL | #[cfg(not(panic = "unwind"))]
   |           ^^^^^^^^^^^^^^^^
   |
   = note: see issue #77443 <https://github.com/rust-lang/rust/issues/77443> for more information
   = help: add `#![feature(cfg_panic)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
